maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:8: error: class Array takes type parameters
def DetectBiscuit():Array ={
                    ^JediEscaper:4: error: too many arguments for method update: (i: Int, x: Int)Unit
  BiscuitCoord(0, 1) = DetectBiscuit()
                     ^JediEscaper:8: error: class Array takes type parameters
def DetectBiscuit():Array ={
                    ^